    we don't endlessly rebuild the target(s) for no reason.

  - Add a Variables object as the first step towards deprecating the
    Options object name.  Similarly, add BoolVariable(), EnumVariable(),
    ListVariable(), PackageVariable() and PathVariable() functions
    as first steps towards replacing BoolOption(), EnumOption(),
    ListOption(), PackageOption() and PathOption().

  - When $SWIGFLAGS contains the -python flag, expect the generated .py
    file to be in the same (sub)directory as the target.

  - When compiling C++ files, allow $CCFLAGS settings to show up on the
    command line even when $CXXFLAGS has been redefined.

  From Anatoly Techtonik:

  - Have the scons.bat file add the script execution directory to its
    local %PATH% on Windows, so the Python executable can be found.

  From Mike Wake:

  - Fix passing variable names as a list to the Return() function.

  From Matthew Wesley:

  - Add support for the GDC 'D' language compiler.



RELEASE 0.98 - Sun, 30 Mar 2008 23:33:05 -0700

  From Benoit Belley:

  - Fix the --keep-going flag so it builds all possible targets even when
    a later top-level target depends on a child that failed its build.

  - Fix being able to use $PDB and $WINDWOWS_INSERT_MANIFEST together.

  - Don't crash if un-installing the Intel C compiler leaves left-over,
    dangling entries in the Windows registry.

  - Improve support for non-standard library prefixes and suffixes by
    stripping all prefixes/suffixes from file name string as appropriate.

  - Reduce the default stack size for -j worker threads to 256 Kbytes.
    Provide user control over this value by adding --stack-size and
    --warn=stack-size options, and a SetOption('stack_size') function.

  - Fix a crash on Linux systems when trying to use the Intel C compiler
    and no /opt/intel_cc_* directories are found.

  - Improve using Python functions as actions by incorporating into
    a FunctionAction's signature: