@@ -466,20 +466,27 @@ RELEASE 0.98.1 - XXX
                 PackageOption()         PackageVariable()
                 PathOption()            PathVariable()
 
+        And also related, the options= keyword argument when creating
+        construction environments with the Environment() functions is
+        being replaced with a variables= keyword argument.
+
         In some future release a deprecation warning will be added to
-        existing uses of the Options object, its methods, and the
-        above utility functions.  At some point after the deprecation
-        warning is added, the Option object and related functions will
-        be removed entirely.
+        existing uses of the Options object, its methods, the above
+        utility functions, and the options= keyword argument of the
+        Environment() function.  At some point after the deprecation
+        warning is added, the Options object, related functions and
+        options= keyword argument will be removed entirely.
 
         You can prepare for this by changing all your uses of the Options
-        object and related functions to the Variables object and the
-        new function names.
+        object and related functions to the Variables object and the new
+        function names, and changing any uses of the options= keyword
+        argument to variables=.
 
         NOTE:  CONVERTING TO USING THE NEW Variables OBJECT OR THE
-        RELATED *Variable() FUNCTIONS IS NOT BACKWARDS COMPATIBLE TO
-        VERSIONS OF SCons BEFORE 0.98.  YOUR SConscript FILES WILL NOT
-        WORK ON EARLIER VERSIONS OF SCons AFTER MAKING THIS CHANGE.
+        RELATED *Variable() FUNCTIONS, OR USING THE NEW variable=
+        KEYWORD ARGUMENT, IS NOT BACKWARDS COMPATIBLE TO VERSIONS OF
+        SCons BEFORE 0.98.  YOUR SConscript FILES WILL NOT WORK ON
+        EARLIER VERSIONS OF SCons AFTER MAKING THIS CHANGE.
 
         If you change SConscript files in software that you make available
         for download or otherwise distribute, other users may try to
@@ -488,8 +495,8 @@ RELEASE 0.98.1 - XXX
         We recommend preparing for this in one of two ways:
 
             --  Make your SConscript files backwards-compatible by
-                modifying your calls with a Python try:-except: block
-                as followins:
+                modifying your calls with  Python try:-except: blocks
+                as follows:
 
                     try:
                         vars = Variables('custom.py', ARGUMENTS)
@@ -523,6 +530,14 @@ RELEASE 0.98.1 - XXX
                                           '/usr/bin/X11'),
                             PathOption('QTDIR', 'root of Qt', qtdir),
                         )
+
+                Additionally, you can check for availability of the new
+                variables= keyword argument as follows:
+
+                    try:
+                        env = Environment(variables=vars)
+                    except TypeError:
+                        env = Environment(options=vars)
 
                 (Note that we plan to maintain the existing Options object
                 name for some time, to ensure backwards compatibility,
